<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    android:background="@drawable/backgorund1"
    android:layout_height="match_parent">

<!--    <Spinner-->
<!--        android:id="@+id/spinner"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->

    <Button
        android:id="@+id/choose"
        android:layout_marginTop="@dimen/font_size_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"/>

    <ProgressBar
        android:id="@+id/progressbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
<!--        android:indeterminate="true"-->
<!--        android:visibility="invisible"-->
<!--        android:max="100" />-->

    <ScrollView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center"
        android:scrollbarThumbVertical="@color/splashbackgroundcolor">

    <ImageView
        android:contentDescription="@string/todo"
        android:id="@+id/imagepath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"/>
    </ScrollView>
    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/upload" />
</LinearLayout>