<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgorund1"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--    <EditText-->
<!--        android:id="@+id/std"-->
<!--        android:layout_width="@dimen/_230sdp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center"-->
<!--        android:background="@drawable/corners"-->
<!--        android:drawableLeft="@drawable/ic_person_black_24dp"-->
<!--        android:drawablePadding="10dp"-->
<!--        android:hint="ધોરણ"-->
<!--        android:textSize="@dimen/font_size_medium"-->
<!--        android:inputType="text"-->
<!--        android:padding="@dimen/_15sdp"-->
<!--        android:textColorHint="#2CA7E0"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/LogoID"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/rollno"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.9" />-->


    <TextView
        android:id="@+id/tvDate"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:padding="@dimen/_12sdp"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:hint="@string/dateofbirht"
        android:background="@drawable/corners"
        android:textColor="#000000"
        android:textColorHint="#2CA7E0"
        android:textSize="@dimen/font_size_medium"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/rollno"
        app:layout_constraintVertical_bias="0"
        android:drawableStart="@drawable/ic_person_black_24dp" />


    <ImageView
        android:id="@+id/LogoID"
        android:layout_width="159dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:contentDescription="@string/image_name"
        android:src="@drawable/logos"
        app:layout_constraintBottom_toTopOf="@+id/ourinfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <Spinner
        android:id="@+id/std"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/corners"
        android:textSize="@dimen/font_size_medium"
        android:drawablePadding="10dp"
        android:textColorHint="#2CA7E0"
        app:layout_constraintBottom_toTopOf="@+id/rollno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ourinfo"
        app:layout_constraintVertical_bias="0.9" />

    <EditText
        android:id="@+id/rollno"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/corners"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/rollno"
        android:textSize="@dimen/font_size_medium"
        android:inputType="number"
        android:padding="@dimen/_12sdp"
        android:textColorHint="#2CA7E0"
        app:layout_constraintTop_toBottomOf="@+id/std"
        app:layout_constraintBottom_toTopOf="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_person_black_24dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="@dimen/font_size_medium"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollno" />

    <TextView
        android:id="@+id/ourinfo"
        android:layout_width="397dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:lines="4"
        android:maxLines="4"
        android:text="@string/ourdescription"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/std"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoID" />


    <RelativeLayout
        android:id="@+id/loadingPanelmainactivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
